# glm-vision-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
examples/: EXAMPLES.md
examples/responses/: 20260213_125911_analyze_image.json  20260213_130013_extract_text.json  20260213_130104_diagnose_error.json  20260213_130205_understand_diagram.json  20260213_130330_analyze_data_viz.json  20260213_130533_ui_diff_check.json  20260213_130618_ui_to_artifact.json  20260213_130711_analyze_video.json  20260213_151155_ui_to_artifact_code.json  20260213_151254_ui_to_artifact_prompt.json  20260213_151337_ui_to_artifact_spec.json  20260213_151420_ui_to_artifact_description.json
src/: client.rs  config.rs  http.rs  lib.rs  prompts.rs  tools.rs  types.rs
