[package]
name = "glm-vision-rs"
version = "0.1.0"
edition = "2021"
description = "Rust client for z.ai GLM vision model"
license = "MIT"
repository = "https://github.com/h9lxyz/glm-vision-rs"
keywords = ["glm", "vision", "zhipu", "ai", "image-analysis"]
categories = ["api-bindings", "multimedia::images"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/**/*.rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
